compile.c
@@ -5111,27 +5111,18 @@ compile_return(rb_iseq_t *iseq, LINK_ANCHOR *const ret, const NODE *const node, 
 	enum iseq_type type = iseq->body->type;
 	const rb_iseq_t *parent_iseq = iseq->body->parent_iseq;
 	enum iseq_type parent_type;
+	const NODE *retval = node->nd_stts;
 	LABEL *splabel = 0;
 
 	if (type == ISEQ_TYPE_TOP) {
-	    splabel = NEW_LABEL(line);
-	    ADD_LABEL(ret, splabel);
-	    ADD_ADJUST(ret, line, 0);
-	    ADD_INSN(ret, line, putnil);
-	    ADD_INSN(ret, line, leave);
-	    ADD_ADJUST_RESTORE(ret, splabel);
-	    return COMPILE_OK;
+	    retval = 0;
+	    type = ISEQ_TYPE_METHOD;
 	}
 	else if ((type == ISEQ_TYPE_RESCUE || type == ISEQ_TYPE_ENSURE || type == ISEQ_TYPE_MAIN) &&
 		 parent_iseq &&
 		 ((parent_type = parent_iseq->body->type) == ISEQ_TYPE_TOP ||
 		  parent_type == ISEQ_TYPE_MAIN)) {
-	    ADD_INSN(ret, line, putnil);
-	    ADD_INSN1(ret, line, throw, INT2FIX(TAG_RETURN));
-	    if (popped) {
-		ADD_INSN(ret, line, pop);
-	    }
-	    return COMPILE_OK;
+	    retval = 0;
 	}
 
 	if (type == ISEQ_TYPE_METHOD) {
@@ -5140,7 +5131,7 @@ compile_return(rb_iseq_t *iseq, LINK_ANCHOR *const ret, const NODE *const node, 
 	    ADD_ADJUST(ret, line, 0);
 	}
 
-	CHECK(COMPILE(ret, "return nd_stts (return val)", node->nd_stts));
+	CHECK(COMPILE(ret, "return nd_stts (return val)", retval));
 
 	if (type == ISEQ_TYPE_METHOD) {
 	    add_ensure_iseq(ret, iseq, 1);
